--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Draft Futbol
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 2.0.2+216
+version: 2.0.4+219
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -12,6 +12,7 @@ dependencies:
   appwrite: ^4.0.2
   auto_size_text: ^3.0.0
   badges: ^2.0.3
+  cart_stepper: ^4.0.0
   collection: ^1.15.0
   cupertino_icons: ^1.0.2
   dropdown_button2: ^1.6.3
@@ -31,6 +32,7 @@ dependencies:
   introduction_screen: ^3.0.2
   line_icons: ^2.0.1
   material_design_icons_flutter: ^5.0.6996
+  multi_select_flutter: ^4.1.3
   path_provider: ^2.0.8
   purchases_flutter: ^3.10.0
   settings_ui: ^2.0.2
