--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,10 @@ dependencies:
   shared_preferences: ^2.0.15
   toggle_switch: ^2.0.1
   url_launcher: ^6.1.4
-  riverpod_annotation: 2.1.1
+  riverpod_annotation: 2.3.4
   go_router: ^9.0.3
   cloud_functions: ^4.3.4
+  flutter_form_builder: ^8.0.0
 
 
 dev_dependencies:
@@ -51,9 +52,9 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-  riverpod_generator: 2.2.3
-  custom_lint: 0.4.0 
-  riverpod_lint: 1.3.2
+  riverpod_generator: 2.3.11
+  custom_lint: 0.6.0 
+  riverpod_lint: 2.3.9
 
 flutter:
   uses-material-design: true
