--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  animated_custom_dropdown: 3.1.1
   auto_size_text: ^3.0.0
   badges: ^2.0.3
   cart_stepper: ^4.0.0
